# website

./: .deepsource.toml  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix
public/: robots.txt
src/: blog.rs  icons.rs  logging.rs  main.rs  reading_time.rs  server.rs  state.rs  utils.rs
src/components/: card.rs  footer.rs  icons.rs  meta_tags.rs  mod.rs
src/routes/: blog.rs  contact.rs  error_404.rs  index.rs  mod.rs  privacy.rs  read.rs  rss.rs
src/sass/: blog.scss  contact.scss  error.scss  index.scss  privacy.scss  read.scss
src/sass/base/: _colors.scss  _core.scss  _fonts.scss  _markdown.scss  _mixins.scss  _typography.scss
src/sass/components/: _card.scss  _footer.scss  _header.scss  card.scss  footer.scss
